[gd_scene load_steps=22 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Assets/Img/volver.png" type="Texture" id=2]
[ext_resource path="res://Scripts/sub-menu/volver_a_menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Img/Escena1#_elementografico.png" type="Texture" id=4]
[ext_resource path="res://Assets/IconTools/lock.png" type="Texture" id=5]
[ext_resource path="res://Assets/IconTools/view.png" type="Texture" id=6]
[ext_resource path="res://Assets/IconTools/ruler.png" type="Texture" id=8]
[ext_resource path="res://Assets/IconTools/undo.png" type="Texture" id=9]
[ext_resource path="res://Assets/IconTools/redo.png" type="Texture" id=11]
[ext_resource path="res://Assets/IconTools/save.png" type="Texture" id=12]
[ext_resource path="res://Assets/Fonts/champagne_limousines/Champagne & Limousines Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Assets/Img/baseOctavio.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 35
extra_spacing_bottom = 10
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=18]
size = 45
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0313726, 0.286275, 0.388235, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0313726, 0.286275, 0.388235, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.121569, 1, 0.992157, 0.121569 )
shadow_size = 7
shadow_offset = Vector2( -1, 2 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.160784, 0.333333, 0.372549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.121569, 0.596078, 0.552941, 0.6 )
shadow_size = 8
shadow_offset = Vector2( 0, -3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.160784, 0.333333, 0.372549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
unique_name_in_owner = true
size = Vector2( 720, 1280 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CanvasLayer_UI_Bars" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="BackgroundBottomBar" type="Panel" parent="CanvasLayer_UI_Bars"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 13 )

[node name="BottomBar" type="HBoxContainer" parent="CanvasLayer_UI_Bars/BackgroundBottomBar" groups=["ui"]]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -67.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 50
alignment = 1

[node name="trancarCamara" type="Button" parent="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar"]
unique_name_in_owner = true
margin_left = 89.0
margin_right = 137.0
margin_bottom = 67.0
icon = ExtResource( 5 )
flat = true

[node name="vistaAerea" type="Button" parent="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar"]
unique_name_in_owner = true
margin_left = 187.0
margin_right = 236.0
margin_bottom = 67.0
icon = ExtResource( 6 )
flat = true

[node name="RotarIzquierda" type="Button" parent="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar"]
margin_left = 286.0
margin_right = 335.0
margin_bottom = 67.0
icon = ExtResource( 9 )
flat = true

[node name="RotarDerecha" type="Button" parent="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar"]
margin_left = 385.0
margin_right = 434.0
margin_bottom = 67.0
icon = ExtResource( 11 )
flat = true

[node name="Meassures" type="Button" parent="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar"]
margin_left = 484.0
margin_right = 533.0
margin_bottom = 67.0
icon = ExtResource( 8 )
flat = true

[node name="Save" type="Button" parent="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar"]
unique_name_in_owner = true
margin_left = 583.0
margin_right = 631.0
margin_bottom = 67.0
icon = ExtResource( 12 )
flat = true

[node name="AcceptDialog" type="AcceptDialog" parent="CanvasLayer_UI_Bars"]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 58.0
window_title = "Â¡Alerta!"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer_UI_Bars/AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 86.0
margin_bottom = 32.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 14 )

[node name="Escena1#Elementografico" type="Sprite" parent="Panel"]
position = Vector2( 273, 752 )
scale = Vector2( 0.62934, 0.551591 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
anchor_left = -0.0916667
anchor_bottom = 0.0234375
margin_left = 250.0
margin_top = 500.0
margin_right = 639.0
margin_bottom = 1110.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 455.0
margin_bottom = 58.0

[node name="anchura" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 53.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.301961, 0.529412, 0.615686, 1 )
custom_fonts/font = SubResource( 7 )
text = "Anchura:"

[node name="anchuraText" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 229.0
margin_right = 455.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/selection_color = Color( 0.302199, 0.530792, 0.505393, 1 )
custom_colors/font_color_selected = Color( 0, 0.176471, 0.156863, 1 )
custom_colors/font_color = Color( 0, 0.176471, 0.156863, 1 )
custom_colors/font_color_uneditable = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 15 )
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 158.0
margin_right = 455.0
margin_bottom = 216.0

[node name="profundidad" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 53.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.301961, 0.529412, 0.615686, 1 )
custom_fonts/font = SubResource( 7 )
text = "Profundidad"

[node name="profundidadText" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 229.0
margin_right = 455.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/selection_color = Color( 0.302199, 0.530792, 0.505393, 1 )
custom_colors/font_color_selected = Color( 0, 0.176471, 0.156863, 1 )
custom_colors/font_color = Color( 0, 0.176471, 0.156863, 1 )
custom_colors/font_color_uneditable = Color( 0, 0.176471, 0.156863, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 15 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 316.0
margin_right = 455.0
margin_bottom = 374.0

[node name="altura" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 53.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.301961, 0.529412, 0.615686, 1 )
custom_fonts/font = SubResource( 7 )
text = "Altura: "
valign = 1

[node name="alturaText" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 229.0
margin_right = 455.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/selection_color = Color( 0.302199, 0.530792, 0.505393, 1 )
custom_colors/font_color_selected = Color( 0, 0.176471, 0.156863, 1 )
custom_colors/font_color = Color( 0, 0.176471, 0.156863, 1 )
custom_colors/font_color_uneditable = Color( 0, 0.176471, 0.156863, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 15 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 474.0
margin_right = 455.0
margin_bottom = 522.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "generar"

[node name="ErrorLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 622.0
margin_right = 455.0
margin_bottom = 670.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )

[node name="volver" type="Button" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 24.0
margin_right = -181.0
margin_bottom = -744.0
rect_scale = Vector2( 0.12, 0.12 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BaseOctavio" type="Sprite" parent="Panel"]
position = Vector2( 317, 229 )
scale = Vector2( 0.767578, 0.773438 )
texture = ExtResource( 14 )

[connection signal="pressed" from="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/trancarCamara" to="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/trancarCamara" method="_on_trancarCamara_pressed"]
[connection signal="pressed" from="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/vistaAerea" to="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/vistaAerea" method="_on_vistaAerea_pressed"]
[connection signal="pressed" from="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/RotarIzquierda" to="." method="_on_RotarIzquierda_pressed"]
[connection signal="pressed" from="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/RotarDerecha" to="." method="_on_RotarDerecha_pressed"]
[connection signal="pressed" from="CanvasLayer_UI_Bars/BackgroundBottomBar/BottomBar/Save" to="." method="_on_Save_pressed"]
[connection signal="confirmed" from="CanvasLayer_UI_Bars/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/volver" to="Panel/volver" method="_on_volver_pressed"]
